// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1626,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 25,
      "type": "chunk",
    },
  ],
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 25,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for hot+production 2`] = `
"    Asset      Size  Chunks  Chunk Names
bundle.js  1.59 KiB    main  main
chunk {main} bundle.js (main) 25 bytes [entry]
[./index.js] 25 bytes {main}"
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 3737,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 15,
      "type": "chunk",
    },
  ],
  "errors": [
    {
      "formatted": "[0m[1m[38;5;9merror[javascript][0m[1m: JavaScript parsing error[0m
  [0m[34m┌─[0m tests/statsCases/identifier-let-strict-mode/index.js:1:5
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m let [0m[31mlet[0m = let;
  [0m[34m│[0m     [0m[31m^^^[0m [0m[31m\`let\` cannot be used as an identifier in strict mode[0m

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
    {
      "formatted": "[0m[1m[38;5;9merror[javascript][0m[1m: JavaScript parsing error[0m
  [0m[34m┌─[0m tests/statsCases/identifier-let-strict-mode/index.js:1:11
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m let let = [0m[31mlet[0m;
  [0m[34m│[0m           [0m[31m^^^[0m [0m[31m\`let\` cannot be used as an identifier in strict mode[0m

",
      "message": "\`let\` cannot be used as an identifier in strict mode",
    },
  ],
  "errorsCount": 2,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/identifier-let-strict-mode/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 15,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for identifier-let-strict-mode 2`] = `
"    Asset      Size  Chunks  Chunk Names
bundle.js  3.65 KiB    main  main
chunk {main} bundle.js (main) 15 bytes [entry]
[./index.js] 15 bytes {main}

[0m[1m[38;5;9merror[javascript][0m[1m: JavaScript parsing error[0m
  [0m[34m┌─[0m tests/statsCases/identifier-let-strict-mode/index.js:1:5
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m let [0m[31mlet[0m = let;
  [0m[34m│[0m     [0m[31m^^^[0m [0m[31m\`let\` cannot be used as an identifier in strict mode[0m



[0m[1m[38;5;9merror[javascript][0m[1m: JavaScript parsing error[0m
  [0m[34m┌─[0m tests/statsCases/identifier-let-strict-mode/index.js:1:11
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m let let = [0m[31mlet[0m;
  [0m[34m│[0m           [0m[31m^^^[0m [0m[31m\`let\` cannot be used as an identifier in strict mode[0m

"
`;

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1672,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 20,
      "type": "chunk",
    },
  ],
  "errors": [
    {
      "formatted": "error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist

",
      "message": "Failed to resolve not-exist",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 20,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 2`] = `
"    Asset      Size  Chunks  Chunk Names
bundle.js  1.63 KiB    main  main
chunk {main} bundle.js (main) 20 bytes [entry]
[./index.js] 20 bytes {main}

error[internal]: Resolve error
  ┌─ tests/statsCases/normal-errors/index.js:1:1
  │
1 │ import "not-exist";
  │ ^^^^^^^^^^^^^^^^^^^ Failed to resolve not-exist

"
`;

exports[`StatsTestCases should print correct stats for parse-error 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1770,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 30,
      "type": "chunk",
    },
  ],
  "errors": [
    {
      "formatted": "[0m[1m[38;5;9merror[javascript][0m[1m: JavaScript parsing error[0m
  [0m[34m┌─[0m tests/statsCases/parse-error/b.js:6:8
  [0m[34m│[0m
[0m[34m6[0m [0m[34m│[0m parser [0m[31m)[0m
  [0m[34m│[0m        [0m[31m^[0m [0m[31mExpected ';', '}' or <eof>[0m

",
      "message": "Expected ';', '}' or <eof>",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./a.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/parse-error/a.js",
      "moduleType": "js",
      "name": "./a.js",
      "size": 15,
      "type": "module",
    },
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/parse-error/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 15,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for parse-error 2`] = `
"    Asset      Size  Chunks  Chunk Names
bundle.js  1.73 KiB    main  main
chunk {main} bundle.js (main) 30 bytes [entry]
[./a.js] 15 bytes {main}
[./index.js] 15 bytes {main}

[0m[1m[38;5;9merror[javascript][0m[1m: JavaScript parsing error[0m
  [0m[34m┌─[0m tests/statsCases/parse-error/b.js:6:8
  [0m[34m│[0m
[0m[34m6[0m [0m[34m│[0m parser [0m[31m)[0m
  [0m[34m│[0m        [0m[31m^[0m [0m[31mExpected ';', '}' or <eof>[0m

"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1735,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 26,
      "type": "chunk",
    },
  ],
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 26,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for simple 2`] = `
"    Asset      Size  Chunks  Chunk Names
bundle.js  1.69 KiB    main  main
chunk {main} bundle.js (main) 26 bytes [entry]
[./index.js] 26 bytes {main}"
`;
